apps/attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
spec:
  selector:
    app: attic
  ports:
    - port: 80
      targetPort: http
      name: http
  type: ClusterIP
