apps/attic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nix-cache.karitham.dev
      secretName: attic-tls
  rules:
    - host: nix-cache.karitham.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attic
                port:
                  number: 80
